# alsoft-conf

./: CMakeLists.txt  README  alsoft-conf.1  alsoft-conf.desktop
debian/: alsoft-conf.install  alsoft-conf.manpages  changelog  control  copyright  menu
src/: confirm_close.cpp  confirm_close.h  main.cpp  main_window.cpp  main_window.h  new_parser.cpp  new_parser.h  speaker.cpp  speaker.h
src/ui/: confirm_close.ui  main.ui
